# pdf-image-classifier

./: .replit  README.md  ai_classifier.py  app.py  figure_classifier.py  free_classifier.py  pyproject.toml  replit.md  report_generator.py  requirements.txt  requirements.txt.txt  utils.py
.streamlit/: config.toml  secrets.toml
